--- a/EDBProjectNineMVC/EDBProjectNineMVC.csproj
+++ b/EDBProjectNineMVC/EDBProjectNineMVC.csproj
@@ -218,6 +218,8 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\img_future_office.jpg" />
+    <Content Include="Content\Images\img_officerelocation.jpg" />
     <Content Include="Content\Images\img_Vr 1.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
